develop MVC module

--- a/mvc/pom.xml
+++ b/mvc/pom.xml
@@ -12,5 +12,6 @@
   <modules>
     <module>old-style</module>
     <module>servlet</module>
+    <module>primefaces</module>
   </modules>
 </project>
