--- a/mvc/primefaces/pom.xml
+++ b/mvc/primefaces/pom.xml
@@ -23,8 +23,16 @@
         <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
-            <version>4.0</version>
+            <version>5.0</version>
         </dependency>
+        
+        
+        <dependency>
+            <groupId>org.primefaces.themes</groupId>
+            <artifactId>delta</artifactId>
+            <version>1.0.10</version>
+        </dependency>
+        
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
